fixed image not showing

--- a/css/style.css
+++ b/css/style.css
@@ -81,10 +81,7 @@
 #cf img {
   position:absolute;
   left:0;
-  -webkit-transition: opacity 0.5s ease-in-out;
-  -moz-transition: opacity 0.5s ease-in-out;
-  -o-transition: opacity 0.5s ease-in-out;
-  transition: opacity 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out 0s;
 }
 
 #cf img.top:hover {
